1.21.11 ADD: speed ui config